--- a/index.html
+++ b/index.html
@@ -1,17 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Moviet:For All your Cinema Queries</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
+
 <body>
-    <div class="container">
-        <h1 class="titlename">Moviet:It's All Cinema Here</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores tempore quam et animi a maiores repellendus ratione illo inventore voluptatem nostrum fugit, placeat, neque consequuntur, harum enim. Provident, cumque quae!</p>
+    <header class="header">
+        <a href="./index.html" class="logo">Moviet</a>
+        <nav>
+            <ul class="navlink">
+                <li><a href="#" class="titlename">Movies</a></li>
+                <li><a href="#" class="titlename">TV Series</a></li>
+                <li><a href="./details.html" class="titlename">About</a></li>
+            </ul>
+        </nav>
+        <div id="searchdiv">
+            <input type="text" name="" id="search" placeholder="Enter Search term">
+            <button onclick="func()"> Search</button>
+        </div>
+    </header>
+    <div id="filter">
+        <select class="dropdown" onChange="scheduleByName(this.value)">
+            <option>Sort By</option>
+            <option value="Name" class="drop-menu">Name</option>
+            <option value="Rating" class="drop-menu">Rating</option>
+            <option value="Length" class="drop-menu">RunTime</option>
+        </select>
     </div>
-    <script src="js/app.js"></script>
+    <div class="contain parent" id="cardbox">
+    </div>
+    
+   <script src="js/app.js"></script>
 </body>
+
 </html>
