Added Home for popular movies

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Moviet:For All your Cinema Queries</title>
     <link rel="stylesheet" href="./styles/main.css">
 </head>
-
 <body>
     <header class="header">
         <a href="./index.html" class="logo">Moviet</a>
@@ -24,7 +23,8 @@
             <button onclick="func()"> Search</button>
         </div>
     </header>
-    <div id="filter">
+    <div  id="filter">
+        <h1 id="dataTitle"></h1>
         <select class="dropdown" onChange="scheduleByName(this.value)">
             <option>Sort By</option>
             <option value="Name" class="drop-menu">Name</option>
