--- a/tv.html
+++ b/tv.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,7 +51,7 @@
     <p> Moviet 2019</p>
 </div>
     </div>
-   <script src="js/app.js"></script>
+   <script src="js/tv.js"></script>
 </body>
 
 </html>
