--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Moviet:For All your Cinema Queries</title>
     <link rel="stylesheet" href="./styles/main.css">
-    <link rel="stylesheet" href="./styles/header.css">
+    <!-- <link rel="stylesheet" href="./styles/header.css"> -->
 </head>
 <body id="body">
     <header class="header">
         <a href="index.html" class="logo"><img src="./logo1.png" height=90%></a>
         <nav>
             <ul class="navlink">
-                <li><a href="index.html" class="titlename" >Movies</a></li>
-                <li><a href="tv.html" class="titlename">TV Series</a></li>
-        
+                <li><a href="index.html" class="titlename" >Popular Movies</a></li>
+                <li><a href="#" class="titlename" >All Movies</a></li>
             </ul>
+            <select class="menudrop">
+                <option><a href="index.html" class="titlename" >Popular Movies</a> </option>
+                <option><a href="#" class="titlename" >All Movies</a></option>
+            </select>
         </nav>
         <div id="searchdiv">
                     <svg style="display: none">
@@ -32,7 +35,6 @@
                     <use xlink:href="#magnify"></use>
                     </svg>
             </button>
-
             </div>
         </div>
     </header>
@@ -45,11 +47,11 @@
             <option value="Date" class="drop-menu">Release Date</option>
         </select>
     </div>
-    <div id="xx"></div>
+<div id="content"></div>
+
 <div id="footer">
     <p> Moviet 2019</p>
 </div>
-    </div>
    <script src="js/app.js"></script>
 </body>
 
