--- a/details.html
+++ b/details.html
@@ -7,7 +7,7 @@
     <title>Moviet Details</title>
     <link rel="stylesheet" href="styles/details.css">
 </head>
-<body onload="onload()">
+<body onload="fetchData()">
     <header class="header">
         <a href="index.html" class="logo"><img src="./logo1.png" height=90%></a>
         <nav>
