--- a/details.html
+++ b/details.html
@@ -47,6 +47,6 @@
             
         </div>
     </div>
-    <script src="/js/details.js"></script>
+    <script src="/js/details.js" type="text/javascript"></script>
 </body>
 </html>
