--- a/details.html
+++ b/details.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Moviet Details</title>
-    <link rel="stylesheet" href="styles/details.css">
+
+    <link rel="stylesheet" href="styles/details.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/header.min.css">
 </head>
 <body  >
     <header class="header">
@@ -51,6 +54,6 @@
             
         </div>
     </div>
-    <script src="./js/details.js" ></script>
+    <script src="./js/details.min.js" ></script>
 </body>
 </html>
