--- a/index.html
+++ b/index.html
@@ -5,25 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Moviet:For All your Cinema Queries</title>
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/main.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="./styles/header.css"> -->
+    <link rel="stylesheet" href="./styles/header.min.css">
 </head>
 <body id="body">
     <header class="header">
          <a href="index.html" class="logo"><img src="./logo1.png" height=90%></a>
-        <!--<nav>
-            <ul class="navlink">
-                <li><a href="index.html" class="titlename" >Popular Movies</a></li>
-                <li><a href="#" class="titlename" >All Movies</a></li>
-            </ul>
-            <select class="menudrop">
-                <option><a href="index.html" class="titlename" >Popular Movies</a> </option>
-                <option><a href="#" class="titlename" >All Movies</a></option>
-            </select>
-        </nav>-->
-
-
         <nav>
             <input type="checkbox" id="menu">
             <label for="menu">
@@ -69,7 +57,7 @@
 <div id="footer">
     <p> Moviet 2019</p>
 </div>
-   <script src="js/app.js"></script>
+   <script src="js/app.min.js"></script>
 </body>
 
 </html>
