--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body id="body">
     <header class="header">
-         <a href="index.html" class="logo"><img src="./logo1.png" height=90%></a>
+         <a href="index.html" class="logo"><img src="./logo1.png" height="45px" width="120px"></a>
         <nav>
             <input type="checkbox" id="menu">
             <label for="menu">
